uj felvasarlas jegy

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,7 +68,7 @@
 												<div class="row align-items-center">
 													<div class="col mr-2">
 														<div class="fw-light text-primary">
-															tormaosztály (kg)
+															III. tormaosztály (kg)
 														</div>
 														<div class="fw-bolder text-muted" th:text="${harmadOsztSulyTermelo}">
 															100
@@ -112,7 +112,7 @@
 												<div class="row align-items-center">
 													<div class="col mr-2">
 														<div class="fw-light text-primary">
-															tormaosztály (kg)
+															Gyökér (kg)
 														</div>
 														<div class="fw-bolder text-muted" th:text="${vastagGyokerSulyTermelo}">
 															100
@@ -134,7 +134,7 @@
 												<div class="row align-items-center">
 													<div class="col mr-2">
 														<div class="fw-light  text-primary">
-															tormaosztály (kg)
+															Ipari (kg)
 														</div>
 														<div class="fw-bolder text-muted" th:text="${vekonyGyokerSulyTermelo}">
 															100
