--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -97,13 +97,17 @@
     <!-- Chart JS CDN -->
 	
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
-    <script th:src="@{/js/chart.js}" src="../../js/chart.js"></script>	
+    <script th:src="@{/js/chart.js}" src="../../js/chart.js"></script>
+    	
     <!-- jsPDF library -->
     <script th:src="@{/js/html2pdf.bundle.min.js}" src="../../js/html2pdf.bundle.min.js"></script>
 	
     <!-- Custom JS -->
     <script th:src="@{/js/main.js}" src="../../js/main.js"></script>
     <script th:src="@{/js/pdf.js}" src="../../js/pdf.js"></script>
+    
+    <!-- jquery mask -->
+    <script th:src="@{/js/mask/dist/jquery.inputmask.js}" src="../../js/mask/dist/jquery.inputmask.js"></script>
 	
 </body>
 </html>
