--- a/src/main/resources/templates/ugyfelek/ugyfelmentes.html
+++ b/src/main/resources/templates/ugyfelek/ugyfelmentes.html
@@ -43,13 +43,10 @@
 			    <input type="text" class="form-control  numberFormat" id="termeloTajSzam" maxlength="12" name="termeloTajSzam" required="required">
 			  </div>
 			  <div class="form-group">
-			    <label for="termeloOstermeloiIgazolvanySzam">Őstermelői igazolvány szám</label>
+			    <label for="termeloOstermeloiIgazolvanySzam">Felir szám</label>
 			    <input type="text" class="form-control numberFormat" id="termeloOstermeloiIgazolvanySzam" maxlength="30" name="termeloOstermeloiIgazolvanySzam" required="required">
 			  </div>
-			  <div class="form-group">
-			    <label for="termeloOstermeloiIgazolvanyErvenyesseg">Őstermelő Igazolvány érvényesség</label>
-			    <input type="date" class="form-control" id="termeloOstermeloiIgazolvanyErvenyesseg" min="1990-01-01" max="2025-01-01" name="termeloOstermeloiIgazolvanyErvenyesseg" required="required">
-			  </div>
+			 
 			  <div class="form-group">
 			    <label for="termeloAdoazonositoJel">Adóazonosító jel</label>
 			    <input type="text" class="form-control numberFormat" id="termeloAdoazonositoJel"  maxlength="30" name="termeloAdoazonositoJel" required="required">
@@ -59,7 +56,7 @@
 			    <input type="text" class="form-control numberFormat" id="termeloAdoSzam" maxlength="30" name="termeloAdoSzam" required="required">
 			  </div>
 			  <div class="form-group">
-			    <label for="termeloCsaladiGazdasagSzam">Családi gazdaság szám</label>
+			    <label for="termeloCsaladiGazdasagSzam">ÖCSG szám</label>
 			    <input type="text" class="form-control numberFormat" id="termeloCsaladiGazdasagSzam" maxlength="30" name="termeloCsaladiGazdasagSzam">
 			  </div>
 			  <div class="form-group">
