--- a/src/main/resources/templates/ugyfelek/ugyfelszerkesztesment.html
+++ b/src/main/resources/templates/ugyfelek/ugyfelszerkesztesment.html
@@ -40,7 +40,7 @@
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloTelefonSzam">Telefonszám</label>
-			    <input type="text" class="form-control" id="termeloTelefonSzam" maxlength="30" th:value="${termelo.termeloTelefonSzam}" name="termeloTelefonSzam">
+			    <input type="text" class="form-control" id="termeloTelefonSzam" maxlength="30" th:value="${termelo.termeloTelefonSzam}" name="termeloTelefonSzam" placeholder="((30) 111-1111)">
 			  </div>
 			  <div class="form-group">
 			    <label for="termeloTajSzam">TAJ Szám</label>
@@ -77,7 +77,7 @@
 			  <button type="submit" class="btn btn-primary">Mentés</button>
 			</form>
 		</div>
-	</div>
+	</div
 
 </body>
 </html>
